--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -46,29 +46,8 @@
     }
 }
 
-@mixin hero($image){
+@mixin hero($color){
     width: 100%;
     height: 100vh;
-    background-image: url($image);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: $color;
 }
-
-@mixin wrapper {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 5rem 0;
-  width: 90%;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-
-  @include respond-to("small"){
-    display: flex;
-    flex-direction: column;
-  }
-}
-  
