--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -43,7 +43,7 @@ header {
           width: 100%;
         }
       }
-      width: 30%;
+      width: 37%;
     }
 
     .idioma {
@@ -100,6 +100,7 @@ header {
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
+      text-transform: lowercase;
       z-index: 2;
     }
 
