--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
 @use "globals" as *;
 @use "layout";
 @use "header";
+@use "section1";
+@use "section2";
+@use "section3";
+@use "section4";
+@use "footer";
