--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,7 +1,8 @@
 @use "globals" as *;
 
-footer{
-    text-align: center;
-    font-size: 30px;
-    padding: 30px 0;
+footer {
+  text-align: center;
+  font-size: 30px;
+  padding: 30px 0;
+  color: #333333;
 }
