--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -10,7 +10,7 @@ header {
   .top-bar {
     @include flex-center(flex, space-around, center);
     padding: $padd-2;
-    color: $negro;
+    color: #333333;
     width: 100%;
     img {
       width: 50px;
@@ -20,7 +20,7 @@ header {
       @include flex-center(flex, space-between, center);
       a {
         text-decoration: none;
-        color: $negro;
+        color: #333333;
         font-size: 16px;
         text-transform: lowercase;
         position: relative;
@@ -35,8 +35,8 @@ header {
           transform: translateX(-50%);
           width: 0%;
           height: 2px;
-          background-color: $negro;
-          transition: width 0.3s ease; 
+          background-color: #333333;
+          transition: width 0.3s ease;
         }
         &:hover::after {
           width: 100%;
@@ -49,7 +49,7 @@ header {
       button {
         border: none;
         background: none;
-        color: $negro;
+        color: #333333;
         font: inherit;
         position: relative;
         display: inline-block;
@@ -57,7 +57,7 @@ header {
         text-transform: lowercase;
         cursor: pointer;
         font-size: 20px;
-    
+
         &::after {
           content: "";
           position: absolute;
@@ -66,10 +66,10 @@ header {
           transform: translateX(-50%);
           width: 0%;
           height: 2px;
-          background-color: $negro;
+          background-color: #333333;
           transition: width 0.3s ease;
         }
-    
+
         &:hover::after {
           width: 100%;
         }
@@ -82,7 +82,8 @@ header {
   @include flex-center(flex, space-between, center);
   flex-grow: 1;
 
-  #prog, #des {
+  #prog,
+  #des {
     width: 100%;
     height: 69%;
     padding: 0 20px;
@@ -90,12 +91,12 @@ header {
     position: relative;
     z-index: 1;
 
-    a{
-      background-color: rgba(240, 240, 227, 0.63);
-      border: 5px solid black;
+    a {
+      background-color: #f5f5f5;
+      border: 5px solid #333333;
       border-radius: 16px;
       padding: 1rem;
-      color:$negro;
+      color: #333333;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -106,14 +107,13 @@ header {
 
     div {
       height: 50%;
-      position: relative; 
+      position: relative;
     }
   }
 
   a {
     text-decoration: none;
-    color: $negro;
+    color: #333333;
     font-size: 50px;
   }
 }
-
