--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -8,5 +8,6 @@
 
 body {
   font-family: $family-source-code-pro;
-  background-color: rgba(240, 240, 227, 0.63);
+  color: #333333;
+  background-color: #f5f5f5;
 }
