--- a/src/style/_section3.scss
+++ b/src/style/_section3.scss
@@ -1,43 +1,43 @@
 @use "globals" as *;
 
 #proyect {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 
-    .portada {
-        @include flex-center(row, space-between, center);
-        width: 80%;
-        margin: 0 auto;
-        padding: 69px 0;
+  .portada {
+    @include flex-center(row, space-between, center);
+    width: 80%;
+    margin: 0 auto;
+    padding: 69px 0;
 
-        #proy {
-            font-size: 69px;
-        }
-
-        .buttonup {
-            text-decoration: none;
-            color: $negro;
-            font-size: 20px;
-            text-transform: lowercase;
-            position: relative;
-            display: inline-block;
-            padding-bottom: 10px;
-
-            &::after {
-                content: "";
-                position: absolute;
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 0%;
-                height: 2px;
-                background-color: $negro;
-                transition: width 0.3s ease;
-            }
-
-            &:hover::after {
-                width: 100%;
-            }
-        }
+    #proy {
+      font-size: 69px;
     }
+
+    .buttonup {
+      text-decoration: none;
+      color: #333333;
+      font-size: 20px;
+      text-transform: lowercase;
+      position: relative;
+      display: inline-block;
+      padding-bottom: 10px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0%;
+        height: 2px;
+        background-color: #333333;
+        transition: width 0.3s ease;
+      }
+
+      &:hover::after {
+        width: 100%;
+      }
+    }
+  }
 }
