--- a/src/style/_section4.scss
+++ b/src/style/_section4.scss
@@ -1,81 +1,78 @@
 @use "globals" as *;
 
 #media {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 
-    .portada {
-        @include flex-center(row, space-between, center);
-        width: 80%;
-        margin: 0 auto;
-        padding: 69px 0;
-    
-        #soc {
-          font-size: 69px;
-        }
-    
-        .buttonup {
-          text-decoration: none;
-          color: $negro;
-          font-size: 20px;
-          text-transform: lowercase;
-          position: relative;
-          display: inline-block;
-          padding-bottom: 10px;
-    
-          &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 0%;
-            height: 2px;
-            background-color: $negro;
-            transition: width 0.3s ease;
-          }
-    
-          &:hover::after {
-            width: 100%;
-          }
-        }
-      }
+  .portada {
+    @include flex-center(row, space-between, center);
+    width: 80%;
+    margin: 0 auto;
+    padding: 69px 0;
 
-    .container {
-        @include flex-center(flex, space-around, center);
-        height: 60%;
-        width: 100%;
-        flex-direction: column;
-
-        .mensaje {
-            text-align: center;
-            font-size: 30px;
-            text-transform: lowercase;
-        }
-
-        .social-container {
-            @include flex-center(row, space-evenly, center);
-            margin-top: 20px;
-            width: 100%;
-        }
-
-        a {
-            text-decoration: none;
-            width: 100px; // Tamaño de los íconos
-            height: 50px;
-        }
-    
-        img {
-            width: 100%; // Hacer que la imagen ocupe todo el contenedor
-            height: auto;
-            padding-bottom: 15px;
-            padding-right: 15px;
-            border-bottom: 3px solid #1d1d1d; // Borde en la parte inferior
-            border-right: 3px solid #1d1d1d; // Borde en el lado derecho
-            object-fit: fill;
-        }
-
+    #soc {
+      font-size: 69px;
     }
 
+    .buttonup {
+      text-decoration: none;
+      color: #333333;
+      font-size: 20px;
+      text-transform: lowercase;
+      position: relative;
+      display: inline-block;
+      padding-bottom: 10px;
 
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0%;
+        height: 2px;
+        background-color: #333333;
+        transition: width 0.3s ease;
+      }
+
+      &:hover::after {
+        width: 100%;
+      }
+    }
+  }
+
+  .container {
+    @include flex-center(flex, space-around, center);
+    height: 60%;
+    width: 100%;
+    flex-direction: column;
+
+    .mensaje {
+      text-align: center;
+      font-size: 30px;
+      text-transform: lowercase;
+    }
+
+    .social-container {
+      @include flex-center(row, space-evenly, center);
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    a {
+      text-decoration: none;
+      width: 100px; // Tamaño de los íconos
+      height: 50px;
+    }
+
+    img {
+      width: 100%; // Hacer que la imagen ocupe todo el contenedor
+      height: auto;
+      padding-bottom: 15px;
+      padding-right: 15px;
+      border-bottom: 3px solid #333333; // Borde en la parte inferior
+      border-right: 3px solid #333333; // Borde en el lado derecho
+      object-fit: fill;
+    }
+  }
 }
