falta libreria y reponsive

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -45,6 +45,10 @@ header {
       width: 37%;
     }
 
+    #skills{
+      display: none;
+    }
+
     .idioma {
       button {
         border: none;
