--- a/src/style/_section2.scss
+++ b/src/style/_section2.scss
@@ -1,43 +1,29 @@
 @use "globals" as *;
 
 #skill {
+  display: none;
   height: 100vh;
   width: 100%;
 
   .portada {
-    @include flex-center(row, space-between, center);
+    @include flex-center(row, center, center);
     width: 80%;
     margin: 0 auto;
-    padding: 69px 0;
+    padding: 30px 0;
 
     #hab {
-      font-size: 69px;
+      font-size: 40px;
     }
 
-    .buttonup {
-      text-decoration: none;
-      color: #333333;
-      font-size: 20px;
-      text-transform: lowercase;
-      position: relative;
-      display: inline-block;
-      padding-bottom: 10px;
+  }
 
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 0%;
-        height: 2px;
-        background-color: #333333;
-        transition: width 0.3s ease;
-      }
+  .centrado{
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
 
-      &:hover::after {
-        width: 100%;
-      }
+    p{
+      margin: 20px 0;
     }
   }
 }
