--- a/src/style/_section3.scss
+++ b/src/style/_section3.scss
@@ -40,4 +40,51 @@
       }
     }
   }
+
+  a{
+    text-decoration: none;
+  }
+
+  .container{
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 60px;
+
+    .title{
+      text-align: center;
+      margin-bottom: 50px;
+      font-size: 20px;
+    }
+
+    .container-card{
+      @include flex-center(flex, space-between, center);
+      .card {
+        height: 100%;
+      
+        .card-img-top {
+          border-top-left-radius: 0.25rem;
+          border-top-right-radius: 0.25rem;
+          width: 600px;
+          object-fit: cover;
+        }
+      
+        .card-title {
+          font-size: 30px;
+          text-align: center;
+          margin-top: 20px;
+          font-weight: bold;
+          color: #333333;
+        }
+      
+        .card-text {
+          color: #333333;
+          font-size: 16px;
+          text-align: center;
+          margin-top: 20px;
+        }
+      }
+    }
+    
+  }
+
 }
