typewritter la lia :)

--- a/src/style/_section3.scss
+++ b/src/style/_section3.scss
@@ -49,6 +49,7 @@
     width: 80%;
     margin: 0 auto;
     margin-top: 60px;
+    text-transform: lowercase;
 
     .title{
       text-align: center;
