--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -5,4 +5,11 @@ footer {
   font-size: 30px;
   padding: 30px 0;
   color: #333333;
+
+  @include respond-to("small") {
+    font-size: 20px;
+    margin-top: 60px;
+    padding: 30px 0;
+  }
+
 }
