--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -79,6 +79,27 @@ header {
         }
       }
     }
+
+    @include respond-to("small"){
+      height: 100%;
+      @include flex-center(flex, center, center);
+      flex-direction: column;
+      nav{
+        @include flex-center(flex, center, center);
+        width: 100%;
+        flex-direction: column;
+        a{
+          margin-top: 30px;
+        }
+        
+      }
+      #skills{
+        display: block;
+      }
+      .idioma{
+        margin-top: 25px;
+      }
+    }
   }
 }
 
@@ -119,5 +140,8 @@ header {
     text-decoration: none;
     color: #333333;
     font-size: 50px;
+  }
+  @include respond-to("small"){
+    display: none;
   }
 }
