--- a/src/style/_section3.scss
+++ b/src/style/_section3.scss
@@ -66,7 +66,6 @@
           border-top-left-radius: 0.25rem;
           border-top-right-radius: 0.25rem;
           width: 600px;
-          object-fit: cover;
         }
       
         .card-title {
@@ -86,6 +85,38 @@
       }
     }
     
+  }
+
+  @include respond-to("small"){
+    height: 100%;
+    .portada {
+      @include flex-center(row, center, center);
+      padding: 30px 0;
+
+      #proy {
+        font-size: 40px;
+      }
+      .buttonup{
+        display: none;
+      }
+    }
+    .container{
+      @include flex-center(row, center, center);
+      flex-direction: column;
+
+      .container-card{
+        @include flex-center(flex, center, center);
+        flex-direction: column;
+
+        .card{
+          margin-top: 60px;
+          .card-img-top{
+            width: 350px;
+          }
+        }
+      }
+      
+    }
   }
 
 }
