--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -8,6 +8,6 @@
 
 body {
   font-family: $family-source-code-pro;
-  color: #333333;
-  background-color: #f5f5f5;
+  color: $negro;
+  background-color: $fondo-claro;
 }
