--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -10,22 +10,22 @@ header {
   .top-bar {
     @include flex-center(flex, space-around, center);
     padding: $padd-2;
-    color: #333333;
+    color: $negro;
     width: 100%;
     img {
-      width: 50px;
+      width: $img-size;
     }
 
     nav {
       @include flex-center(flex, space-between, center);
       a {
         text-decoration: none;
-        color: #333333;
-        font-size: 16px;
+        color: $negro;
+        font-size: $size-link;
         text-transform: lowercase;
         position: relative;
         display: inline-block;
-        padding-bottom: 10px;
+        padding-bottom: $padd-bottom-link;
 
         &::after {
           content: "";
@@ -34,15 +34,15 @@ header {
           left: 50%;
           transform: translateX(-50%);
           width: 0%;
-          height: 2px;
-          background-color: #333333;
-          transition: width 0.3s ease;
+          height: $height2p;
+          background-color: $negro;
+          transition: $transition1;
         }
         &:hover::after {
           width: 100%;
         }
       }
-      width: 37%;
+      width: $width-37;
     }
 
     #skills{
@@ -53,14 +53,14 @@ header {
       button {
         border: none;
         background: none;
-        color: #333333;
+        color: $negro;
         font: inherit;
         position: relative;
         display: inline-block;
-        padding-bottom: 10px;
+        padding-bottom: $padd-bottom-link;
         text-transform: lowercase;
         cursor: pointer;
-        font-size: 20px;
+        font-size: $size-20;
 
         &::after {
           content: "";
@@ -69,9 +69,9 @@ header {
           left: 50%;
           transform: translateX(-50%);
           width: 0%;
-          height: 2px;
-          background-color: #333333;
-          transition: width 0.3s ease;
+          height: $height2p;
+          background-color: $negro;
+          transition: $transition1;
         }
 
         &:hover::after {
@@ -89,7 +89,7 @@ header {
         width: 100%;
         flex-direction: column;
         a{
-          margin-top: 30px;
+          margin-top: $margintop30;
         }
         
       }
@@ -97,7 +97,7 @@ header {
         display: block;
       }
       .idioma{
-        margin-top: 25px;
+        margin-top: $margintop25;
       }
     }
   }
@@ -111,37 +111,47 @@ header {
   #des {
     width: 100%;
     height: 69%;
-    padding: 0 20px;
+    padding: $padd-despro;
     text-align: center;
     position: relative;
     z-index: 1;
 
     a {
       background-color: #f5f5f5;
-      border: 5px solid #333333;
-      border-radius: 16px;
-      padding: 1rem;
-      color: #333333;
+      font-size: $size-40;
+      border: $border-color2;
+      border-radius: $border-a;
+      padding: $padd-1;
+      color: $negro;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
       text-transform: lowercase;
       z-index: 2;
+
+      // Efecto de hover
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+      &:hover {
+        transform: translateX(-50%) translateY(-50%) scale(1.1); 
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+      }
     }
 
     div {
-      height: 50%;
+      height: $height-50;
       position: relative;
     }
   }
 
   a {
     text-decoration: none;
-    color: #333333;
-    font-size: 50px;
+    color: $negro;
+    font-size: $size-50;
   }
-  @include respond-to("small"){
+
+  @include respond-to("small") {
     display: none;
   }
 }
